# sendy

./: .gitignore  README.txt  _settings.py  crontab.src  pyproject.toml  sendy_send.sh  sendy_test.sh  sendyrsspub.py
feeds/: feed.rss  feed.sendy.rss
templates/: responsive-with-contents-with-header.html  responsive-with-contents.html  responsive-with-hero-image.html  responsive-without-contents-wth-header.html  responsive.html  responsive.prev.html  test.html  text.txt
unused/: sendy_send_test.sh  sendyrsspub_test.py
